# game_of_life_nn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/game_of_life/: CMakeLists.txt
common/game_of_life/lib/: game_of_life.cpp  game_of_life.hpp
common/game_of_life/lib/py/: game_of_life_py.cpp
common/game_of_life/test/: test_game_of_life.cpp
common/mazes/: CMakeLists.txt
common/mazes/lib/: mazes.cpp  mazes.hpp
common/mazes/lib/py/: mazes_py.cpp
common/mazes/test/: test_mazes.cpp
game_of_life/: CMakeLists.txt
game_of_life/lib/: game_of_life.cpp  game_of_life.hpp
game_of_life/lib/py/: game_of_life_py.cpp
game_of_life/test/: test_game_of_life.cpp
models/: prediction.py  run.py  trace.py  train.py
models/game_of_life/: prediction.py  run.py  trace.py  train.py
models/game_of_life/cpp/: CMakeLists.txt
models/game_of_life/cpp/src/: game_of_life_runner_grid.cpp  game_of_life_runner_grid.hpp  grid_model_executor.cpp  grid_model_executor.hpp  main.cpp  model_executor.cpp  model_executor.hpp  sdl_window.cpp  sdl_window.hpp
models/game_of_life/models/: game_of_life_grid.torchscript
models/mazes/: train.py
models/saved/: game_of_life_grid.pt
runner/: CMakeLists.txt
runner/src/: game_of_life_runner_grid.cpp  game_of_life_runner_grid.hpp  grid_model_executor.hpp  main.cpp  sdl_window.cpp  sdl_window.hpp
